--- a/.gitignore
+++ b/.gitignore
@@ -177,4 +177,57 @@ results*
 content/**/*.npz
 data/**/*.npz
 !data/masks/GAL_PlanckMasks_2048.npz
-*.pdf
+
+
+# LaTeX intermediate files
+*.aux
+*.bbl
+*.blg
+*.brf
+*.fls
+*.fdb_latexmk
+*.log
+*.out
+*.toc
+*.lof
+*.lot
+*.synctex.gz
+*.nav
+*.snm
+*.vrb
+*.xdv
+*.ilg
+*.ind
+*.idx
+*.glo
+*.gls
+*.acn
+*.acr
+*.alg
+*.dvi
+*.run.xml
+
+# latexml
+*.ltxml
+
+# Output files
+*.ps
+*.eps
+
+# Editor backups
+*~
+*.swp
+*.bak
+*.backup
+*.tmp
+*.temp
+
+# VS Code project settings (optional)
+.vscode/
+
+# latexmk history
+.latexmkrc
+
+# MacOS
+.DS_Store
+apssampNotes.bib
