--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-git+https://github.com/CMBSciPol/furax
-git+https://github.com/CMBSciPol/jax-healpy
+furax
+jax-healpy
 jax_hpc_profiler
-git+https://github.com/ASKabalan/jax-grid-search
+jax-grid-search
 jaxopt
 git+https://github.com/fgbuster/fgbuster@clusters
 pre-commit
